--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -35,6 +35,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="/especialidade">Especialidades</a></li>
                             <li><a class="dropdown-item" href="/medico">Médicos</a></li>
+                            <li><a class="dropdown-item" href="/paciente">Pacientes</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
