feat: adiciona logica de primeiro acesso e tela de primeiro acesso

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -40,11 +40,14 @@
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="#"></a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>-->
+<!--                    </li>-->
                     <li class="nav-item">
-                        <a class="nav-link" href="#"></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
+                        <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
                     </li>
                 </ul>
             </div>
