--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,11 +1,19 @@
 <!doctype html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ulraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout.html}">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
     <title>TCC | Login </title>
 </head>
 <body>
-    <div layout:fragment="content">
+    <h1>Log in</h1>
+    <div class="card">
             <form th:action="@{/login}" method="post" >
                 <div class="mb-3">
                     <label for="username" class="form-label">Email</label>
@@ -17,10 +25,14 @@
                     <input type="password" class="form-control" id="password" name="password"
                            placeholder="Senha" required>
                 </div>
-                <button type="submit" >Entrar</button>
+                <button type="submit" class="btn btn-primary mt-3">Entrar</button>
             </form>
-        <a th:href="@{/paciente/cadastrar}" class="btn btn-primary mt-3">Novo Paciente</a>
-        <a th:href="@{/esqueci-senha}" class="btn btn-primary mt-3">Esqueci a senha</a>
     </div>
+    <a th:href="@{/paciente/cadastrar}" class="btn btn-primary mt-3">Novo Paciente</a>
+    <a th:href="@{/esqueci-senha}" class="btn btn-primary mt-3">Esqueci a senha</a>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous">
+    </script>
 </body>
 </html>
