--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -11,12 +11,16 @@
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
+    <link rel="icon" th:href="@{/images/favicon.ico}" />
     <title>Document</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="/">
+                <img class="mb-4" th:src="@{/images/Anhembi-morumbi-logo.png}" alt=""
+                                                  width="72" height="72">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,14 +44,10 @@
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" href="#"></a>-->
-<!--                    </li>-->
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>-->
-<!--                    </li>-->
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+                        <div class="btn-group mb-2 mr-sm-2">
+                            <a class="btn btn-danger" aria-current="page" href="/logout">Logout</a>
+                        </div>
                     </li>
                 </ul>
             </div>
