--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -9,30 +9,39 @@
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
+    <link rel="icon" th:href="@{/images/favicon.ico}" />
+    <link th:href="@{/css/login.css}" rel="stylesheet" />
     <title>TCC | Login </title>
 </head>
 <body>
-    <h1>Log in</h1>
-    <div class="card">
+    <div class="text-center mb-4">
+        <img class="mb-4" th:src="@{/images/Anhembi-morumbi-logo.png}" alt=""
+             width="72" height="72">
+        <h1 class="h3 mb-3 font-weight-normal">Clínica UAM</h1>
+        <div class="card card-center" style="">
             <form th:action="@{/login}" method="post" >
-                <div class="mb-3">
-                    <label for="username" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="username" name="username"
-                           placeholder="Email" required>
+                <h5 class="card-title">Seja bem-vindo.</h5>
+                <p class="text-muted">Realize seu login para continuar</p>
+
+                <div class="mb-4">
+                    <label for="inputEmail">Email</label>
+                    <input type="email" id="inputEmail" class="form-control"
+                           placeholder="Email address" name="username" required autofocus>
                 </div>
-                <div class="mb-3">
+                <div class="mb-4">
                     <label for="password" class="form-label">Senha</label>
                     <input type="password" class="form-control" id="password" name="password"
                            placeholder="Senha" required>
                 </div>
                 <button type="submit" class="btn btn-primary mt-3">Entrar</button>
             </form>
+        </div>
     </div>
-    <a th:href="@{/paciente/cadastrar}" class="btn btn-primary mt-3">Novo Paciente</a>
-    <a th:href="@{/esqueci-senha}" class="btn btn-primary mt-3">Esqueci a senha</a>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous">
-    </script>
+        <a th:href="@{/paciente/cadastrar}" class="btn btn-primary mt-3">Novo Paciente</a>
+        <a th:href="@{/esqueci-senha}" class="btn btn-primary mt-3">Esqueci a senha</a>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                crossorigin="anonymous">
+        </script>
 </body>
 </html>
