--- a/src/main/resources/templates/paciente/form.html
+++ b/src/main/resources/templates/paciente/form.html
@@ -17,7 +17,7 @@
             </div>
             <div class="mb-3">
                 <label for="dataNascimento" class="form-label">Data de nacimento</label>
-                <input type="date" class="form-control" id="dataNascimento" th:field="${pacienteDTO.novaSenha}"
+                <input type="date" class="form-control" id="dataNascimento" th:field="${pacienteDTO.dataNascimento}"
                        placeholder="" required>
             </div>
             <div class="mb-3">
