--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -12,6 +12,7 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
     <link rel="icon" th:href="@{/images/favicon.ico}" />
+    <link rel="stylesheet" th:href="@{/css/layout.css}">
     <title>Document</title>
 </head>
 <body>
@@ -46,7 +47,7 @@
                     </li>
                     <li class="nav-item">
                         <div class="btn-group mb-2 mr-sm-2">
-                            <a class="btn btn-danger" aria-current="page" href="/logout">Logout</a>
+                            <a class="btn btn-danger button__logout" aria-current="page" href="/logout">Logout</a>
                         </div>
                     </li>
                 </ul>
