--- a/src/main/resources/templates/medico/lista.html
+++ b/src/main/resources/templates/medico/lista.html
@@ -3,17 +3,30 @@
       layout:decorate="~{layout.html}">
 <head>
     <title>TCC | Especialidade</title>
+    <link rel="stylesheet" th:href="@{/css/layout.css}">
 </head>
 <body>
 <div layout:fragment="content">
-    <h1>Médicos</h1>
+
+    <h1 class="titulo">Médicos</h1>
+
+    <div class="pesquisa">
+
+        <form class="d-flex" method="GET" th:action="@{/medico?nome=${palavra}}">
+            <input class="form-control me-2 " type="search" name="palavra" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+
+        <a href="/medico/cadastrar" class="btn btn-primary">Novo médico</a>
+    </div>
+
     <div class="alert alert-primary" th:if="${#lists.isEmpty(medicos)}">
         Nenhum médico cadastrado!
     </div>
     <div class="alert alert-success" th:if="${mensagem}" th:text="${mensagem}"></div>
     <div class="alert alert-danger" th:if="${erro}" th:text="${erro}"></div>
 
-    <div class="card"  th:if="${not #lists.isEmpty(medicos)}">
+    <div class="apresentacao"  th:if="${not #lists.isEmpty(medicos)}">
         <table class="table">
             <thead>
             <tr>
@@ -35,8 +48,6 @@
             </tbody>
         </table>
     </div>
-    <a href="/medico/cadastrar" class="btn btn-primary">Novo médico</a>
-
 </div>
 
 </body>
