--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -11,14 +11,17 @@
           crossorigin="anonymous">
     <link rel="icon" th:href="@{/images/favicon.ico}" />
     <link th:href="@{/css/login.css}" rel="stylesheet" />
+    <link rel="stylesheet" th:href="@{/css/layout.css}">
     <title>TCC | Login </title>
 </head>
 <body>
-    <div class="text-center mb-4">
+    <div class="alert alert-success" th:if="${mensagem}" th:text="${mensagem}"></div>
+
+    <div class="text-center mb-4 apresentacao">
         <img class="mb-4" th:src="@{/images/Anhembi-morumbi-logo.png}" alt=""
              width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Clínica UAM</h1>
-        <div class="card card-center" style="">
+        <div class="card card-center apresentacao" style="">
             <form th:action="@{/login}" method="post" >
                 <h5 class="card-title">Seja bem-vindo.</h5>
                 <p class="text-muted">Realize seu login para continuar</p>
@@ -34,10 +37,10 @@
                            placeholder="Senha" required>
                 </div>
                 <button type="submit" class="btn btn-primary mt-3">Entrar</button>
+                <a th:href="@{/esqueci-a-senha}" class="btn btn-primary mt-3">Esqueci a senha</a>
             </form>
         </div>
     </div>
-        <a th:href="@{/esqueci-senha}" class="btn btn-primary mt-3">Esqueci a senha</a>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous">
