--- a/src/main/resources/templates/login/esqueciSenha.html
+++ b/src/main/resources/templates/login/esqueciSenha.html
@@ -15,7 +15,7 @@
 <body>
 <div>
     <div class="alert alert-success" th:if="${mensagem}" th:text="${mensagem}"></div>
-    <div class="text-center apresentacao">
+    <div class="text-center mb-4 apresentacao">
         <img class="mb-4" th:src="@{/images/Anhembi-morumbi-logo.png}" alt=""
              width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Clínica UAM</h1>
