--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -59,6 +59,46 @@
         <div layout:fragment="content"></div>
     </main>
 
+    <script>
+    const webcamElement = document.getElementById('webcam');
+    const captureButton = document.getElementById('capture');
+    const canvasElement = document.getElementById('canvas');
+    const imagemBase64Input = document.getElementById('imagemBase64'); // Campo oculto
+
+    navigator.mediaDevices.getUserMedia({ video: true })
+        .then(function (stream) {
+            webcamElement.srcObject = stream;
+        })
+        .catch(function (error) {
+            console.error('Erro ao acessar a webcam:', error);
+        });
+
+    captureButton.addEventListener('click', function () {
+        const context = canvasElement.getContext('2d');
+        canvasElement.width = webcamElement.videoWidth;
+        canvasElement.height = webcamElement.videoHeight;
+        context.drawImage(webcamElement, 0, 0, webcamElement.videoWidth, webcamElement.videoHeight);
+
+        // Compactação da imagem antes da conversão para base64
+        const quality = 0.8; // Qualidade da compactação (0 a 1)
+        canvasElement.toBlob(function(blob) {
+            const reader = new FileReader();
+            reader.readAsDataURL(blob);
+            reader.onloadend = function() {
+                const compressedImageDataUrl = reader.result;
+
+                // Atualize o campo oculto com a imagem compactada em formato base64
+                imagemBase64Input.value = compressedImageDataUrl;
+
+                // Exiba a imagem compactada (opcional)
+                const capturedImage = document.getElementById('captured-image');
+                capturedImage.src = compressedImageDataUrl;
+                capturedImage.style.display = 'block';
+            };
+        }, 'image/jpeg', quality);
+    });
+</script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous">
