--- a/src/main/resources/templates/paciente/form.html
+++ b/src/main/resources/templates/paciente/form.html
@@ -22,7 +22,7 @@
                            placeholder="Digite seu nome" required>
                 </div>
                 <div class="mb-3">
-                    <label for="dataNascimento" class="form-label">Data de nacimento</label>
+                    <label for="dataNascimento" class="form-label">Data de Nascimento</label>
                     <input type="date" class="form-control" id="dataNascimento" th:field="${pacienteDTO.dataNascimento}"
                            placeholder="" required>
                 </div>
@@ -31,10 +31,16 @@
                     <input type="text" class="form-control" id="email" th:field="${pacienteDTO.email}"
                            placeholder="" required>
                 </div>
+                <div>
+                    <video id="webcam" autoplay></video>
+                    <button id="capture">Capturar Foto</button>
+                    <canvas id="canvas" style="display: none;"></canvas>
+                    <img id="captured-image" src="" alt="Foto capturada" style="display: none;">
+                    <input type="hidden" id="imagemBase64" th:field="${pacienteDTO.imagemBase64}" />
+                </div>
             </div>
             <button type="submit" class="btn btn-primary mt-3">Cadastrar</button>
         </form>
     </div>
 </div>
-
 </html>
