--- a/src/main/resources/templates/login/esqueciSenha.html
+++ b/src/main/resources/templates/login/esqueciSenha.html
@@ -3,37 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width,  initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
+    <link rel="icon" th:href="@{/images/favicon.ico}" />
     <link rel="stylesheet" th:href="@{/css/layout.css}">
+    <link rel="stylesheet" th:href="@{/css/login.css}"  />
     <title>TCC | Esqueci a senha </title>
 </head>
 <body>
-<div>
+
     <div class="alert alert-success" th:if="${mensagem}" th:text="${mensagem}"></div>
-    <div class="text-center mb-4 apresentacao">
-        <img class="mb-4" th:src="@{/images/Anhembi-morumbi-logo.png}" alt=""
-             width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Clínica UAM</h1>
-        <div class="card card-center apresentacao" style="">
-            <form method="post" th:action="@{/esqueci-a-senha}" class="card-body row">
-                <h5 class="card-title">Esqueci a senha</h5>
-                <p class="text-muted">Insira seu email para redefinir a senha</p>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="" required>
+
+    <div class = "card-login">
+
+        <div class="formulario-login">
+
+            <div class=" w-100 d-flex flex-column justify-content-center p-5">
+
+                <div class="text-center">
+                    <h3 class="card-title">Esqueci a senha</h3>
+                    <p class="text-muted">Insira seu email para redefinir a senha</p>
                 </div>
 
-                <button type="submit" class="btn btn-primary mt-3">Enviar Email</button>
-            </form>
-        </div>
-    </div>
+                <form method="post" th:action="@{/esqueci-a-senha}">
+                     <div class="mb-4">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="" required>
+                    </div>
 
-</div>
+                    <div class="login-botao">
+                        <button type="submit" class="btn btn-primary mt-3">Enviar Email</button>
+                        <a th:href="@{/login}" class="btn btn-primary mt-3">Login</a>
+                    </div>
+                    
+                </form>
+                
+            </div>
+
+            <div class="imagem-medico">
+                <img th:src="@{/images/Medico.avif}" alt="">
+            </div>
+
+        </div>  
+    </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous">
