--- a/src/main/resources/templates/login/trocarSenha.html
+++ b/src/main/resources/templates/login/trocarSenha.html
@@ -9,37 +9,54 @@
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
+          <link rel="icon" th:href="@{/images/favicon.ico}" />
     <link rel="stylesheet" th:href="@{/css/layout.css}">
+    <link rel="stylesheet" th:href="@{/css/login.css}"  />
     <title>TCC | Primeiro Acesso </title>
 </head>
 <body>
-<div>
+
     <div class="alert alert-danger" th:if="${erro}" th:text="${erro}"></div>
 
-    <div class="text-center apresentacao">
-        <img class="mb-4" th:src="@{/images/Anhembi-morumbi-logo.png}" alt=""
-             width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Clínica UAM</h1>
-        <div class="card card-center apresentacao" style="">
-            <form method="post" th:action="@{'/esqueci-a-senha/trocar-senha/' + ${tokenString}}" th:object="${novaSenhaDTO}" class="card-body row" >
-                <h5 class="card-title">Esqueci a senha</h5>
-                <p class="text-muted">Redefinir senha.</p>
-                <div class="mb-3">
-                    <label for="senha" class="form-label">Senha</label>
-                    <input type="password" class="form-control" id="senha" th:field="${novaSenhaDTO.novaSenha}"
-                           placeholder="" required>
+    <div class = "card-login">
+        
+        <div class="formulario-login">
+
+            <div class=" w-100 d-flex flex-column justify-content-center p-5">
+
+                <div class="text-center">
+                    <h3 class="card-title">Esqueci a senha</h3>
+                    <p class="text-muted">Redefinir senha.</p>
                 </div>
-                <div class="mb-3">
-                    <label for="confirmacaoSenha" class="form-label">Confirmar Senha</label>
-                    <input type="password" class="form-control" id="confirmacaoSenha" th:field="${novaSenhaDTO.confirmarSenha}"
-                           placeholder="" required>
-                </div>
-                <button type="submit" class="btn btn-primary mt-3">Trocar Senha</button>
-            </form>
+
+                <form method="post" th:action="@{'/esqueci-a-senha/trocar-senha/' + ${tokenString}}" th:object="${novaSenhaDTO}">
+                
+                    <div class="mb-4">
+                        <label for="senha" class="form-label">Senha</label>
+                        <input type="password" class="form-control" id="senha" th:field="${novaSenhaDTO.novaSenha}"
+                               placeholder="" required>
+                    </div>
+
+                    <div class="mb-4">
+                        <label for="confirmacaoSenha" class="form-label">Confirmar Senha</label>
+                        <input type="password" class="form-control" id="confirmacaoSenha" th:field="${novaSenhaDTO.confirmarSenha}"
+                               placeholder="" required>
+                    </div>
+
+                    <div class="login-botao"> 
+                        <button type="submit" class="btn btn-primary mt-3">Trocar Senha</button>
+                    </div>
+                </form>
+
+            </div>
+
+            <div class="imagem-medico">
+                <img th:src="@{/images/Medico.avif}" alt="">
+            </div>
+            
         </div>
     </div>
 
-</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous">
