--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,8 +19,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-                <img class="mb-4" th:src="@{/images/Anhembi-morumbi-logo.png}" alt=""
-                                                  width="72" height="72">
+                <img class="mb-4" th:src="@{/images/Agp-lab-logo.png}" alt=""
+                                                  width="120" height="70">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
