--- a/src/main/resources/templates/login/esqueciSenha.html
+++ b/src/main/resources/templates/login/esqueciSenha.html
@@ -16,8 +16,8 @@
 <div>
     <div class="alert alert-success" th:if="${mensagem}" th:text="${mensagem}"></div>
     <div class="text-center mb-4 apresentacao">
-        <img class="mb-4" th:src="@{/images/Anhembi-morumbi-logo.png}" alt=""
-             width="72" height="72">
+        <img class="mb-4" th:src="@{/images/Agp-lab-logo.png}" alt=""
+             width="200" height="150">
         <h1 class="h3 mb-3 font-weight-normal">Clínica UAM</h1>
         <div class="card card-center apresentacao" style="">
             <form method="post" th:action="@{/esqueci-a-senha}" class="card-body row">
