--- a/src/main/resources/templates/login/primeiro-acesso.html
+++ b/src/main/resources/templates/login/primeiro-acesso.html
@@ -19,8 +19,8 @@
     <div class="alert alert-danger" th:if="${erro}" th:text="${erro}"></div>
 
     <div class="text-center apresentacao">
-        <img class="mb-4" th:src="@{/images/Anhembi-morumbi-logo.png}" alt=""
-             width="72" height="72">
+        <img class="mb-4" th:src="@{/images/Agp-lab-logo.png}" alt=""
+             width="200" height="150">
         <h1 class="h3 mb-3 font-weight-normal">Clínica UAM</h1>
         <div class="card card-center apresentacao" style="">
             <form method="post" th:action="@{/primeiro-acesso}" th:object="${novaSenhaDTO}" class="card-body row" >
